Fix hero on mobile

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -12,7 +12,7 @@
 
 .hero-container {
   max-width: 1140px;
-  height: 169px;
+  min-height: 169px;
   flex-direction: column;
   justify-content: center;
   display: flex;
